samples/_failures_safe/1761475184_524812_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_458c12f5.c: In function ‘main’:
./samples/SAFE/__tmp_458c12f5.c:134:19: error: expected ‘;’ at end of input
  134 |             printf
      |                   ^
      |                   ;
./samples/SAFE/__tmp_458c12f5.c:134:13: error: expected declaration or statement at end of input
  134 |             printf
      |             ^~~~~~
./samples/SAFE/__tmp_458c12f5.c:134:13: error: expected declaration or statement at end of input
./samples/SAFE/__tmp_458c12f5.c:134:13: error: expected declaration or statement at end of input
